--- a/ormconfig.json
+++ b/ormconfig.json
@@ -9,5 +9,6 @@
   "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
   "cli": {
     "migrationsDir": "./src/shared/infra/typeorm/migrations"
-  }
+  },
+  "logging": false
 }
